Make C++ driver call GLE after storing gridFS chunks, before calling filemd5. SERVER-6742

This ensures that there are no pending writebacks from the chunks being inserted.